# SandboxSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: shader.frag  shader.vert
src/: main.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
